# org.muhkuh.lua-luaftdi

./: .build  .build04_artefacts.sh  .build05_examples.sh  .build_common.sh  .build_examples.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_ubuntu_1710_x64.sh  .lxc_build_ubuntu_1710_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  __NOTES__.txt  build_artifact.py  dependency-log.xml
.github/workflows/: main.yml
cmake/: muhkuh_lua.cmake
examples/: NXJTAG_USB_set_16ma.lua  decode_eeprom.lua  eeprom_decode.lua  eeprom_erase.lua  eeprom_read_bin.lua  eeprom_write_bin.lua  erase_eeprom.lua  list_all_devices.lua  luaftdi-examples.xml  test_bitbang_input.lua  test_bitbang_output.lua
examples/jonchki/: finalizer.lua  jonchkicfg.xml  luaftdi-examples.xml
jonchki/: jonchkihere.py
luaftdi/: CMakeLists.txt  ftdi1.i  luaftdi.i  usb_tree_matcher.lua  wrapper.cpp  wrapper.h
luaftdi/installer/: luaftdi.xml
luaftdi/installer/lua5.1/: CMakeLists.txt  luaftdi.xml
luaftdi/installer/lua5.2/: CMakeLists.txt  luaftdi.xml
luaftdi/installer/lua5.3/: CMakeLists.txt  install_windows.lua  luaftdi.xml
luaftdi/installer/lua5.4/: install_linux.lua  install_windows.lua  luaftdi.xml
